# sdd-barista-agent

./: AGENTS.md  PRD.md  SPEC.md  pyproject.toml
.agents/conventions/: architecture.md  code-layout.md  layout.env  layout.md
docs/: SPEC.example.md
src/barista/: __init__.py
src/barista/agent/: __init__.py  response.py  shell.py
src/barista/core/: __init__.py  engine.py  menu.py  models.py  schema.py  stock.py
src/barista/core/rules/: __init__.py  base.py  r1_off_menu.py  r2_out_of_stock.py  r3_ask.py  r4_make.py  r5_allergy.py
tests/: test_agent.py  test_r1_off_menu.py  test_r2_out_of_stock.py  test_r3_ask.py  test_r4_make.py  test_r5_allergy.py
